--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
         "tailwindcss": "^3.4.3",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
-        "webpack-notifier": "^1.15.0"
+        "webpack-notifier": "^1.15.0",
+        "@rushstack/eslint-patch": "^1.8.0",
+        "@vitejs/plugin-vue": "^5.0.4",
+        "@vitejs/plugin-vue-jsx": "^3.1.0",
+        "@vue/eslint-config-prettier": "^9.0.0",
+        "material-design-icons-iconfont": "^6.7.0",
+        "vite": "^5.2.8",
+        "vite-plugin-vue-devtools": "^7.0.25"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -22,9 +29,12 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@mdi/font": "^7.4.47",
+        "axios": "^1.7.2",
         "vue": "^3.4.27",
         "vue-loader": "^17.4.2",
         "vue-router": "^4.3.2",
-        "vue-template-compiler": "^2.7.16"
+        "vue-template-compiler": "^2.7.16",
+        "vuetify": "^3.6.8"
     }
 }
