--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -2,9 +2,9 @@ api_platform:
     title: Hello API Platform
     version: 1.0.0
     formats:
-        jsonld: ['application/ld+json']
+        json: ['application/json']
     docs_formats:
-        jsonld: ['application/ld+json']
+        json: ['application/json']
         jsonopenapi: ['application/vnd.openapi+json']
         html: ['text/html']
     defaults:
@@ -16,3 +16,8 @@ api_platform:
             rfc_7807_compliant_errors: true
     keep_legacy_inflector: false
     use_symfony_listeners: true
+    swagger:
+         api_keys:
+             JWT:
+                name: Authorization
+                type: header
