--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,10 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+# api_auth:
+#     path: api/auth
+#     methods: ['POST']
+
+api_login_check:
+    path: /api/login_check
