--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ yarn-error.log
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+### docker ###
+/db-data
+###
