--- a/package.json
+++ b/package.json
@@ -2,23 +2,23 @@
     "devDependencies": {
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
+        "@rushstack/eslint-patch": "^1.8.0",
         "@symfony/webpack-encore": "^4.0.0",
+        "@vitejs/plugin-vue": "^5.0.4",
+        "@vitejs/plugin-vue-jsx": "^3.1.0",
+        "@vue/eslint-config-prettier": "^9.0.0",
         "autoprefixer": "^10.4.19",
         "core-js": "^3.23.0",
+        "material-design-icons-iconfont": "^6.7.0",
         "postcss": "^8.4.38",
         "postcss-loader": "^7.3.4",
         "regenerator-runtime": "^0.13.9",
         "tailwindcss": "^3.4.3",
+        "vite": "^5.2.12",
+        "vite-plugin-vue-devtools": "^7.0.25",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
-        "webpack-notifier": "^1.15.0",
-        "@rushstack/eslint-patch": "^1.8.0",
-        "@vitejs/plugin-vue": "^5.0.4",
-        "@vitejs/plugin-vue-jsx": "^3.1.0",
-        "@vue/eslint-config-prettier": "^9.0.0",
-        "material-design-icons-iconfont": "^6.7.0",
-        "vite": "^5.2.8",
-        "vite-plugin-vue-devtools": "^7.0.25"
+        "webpack-notifier": "^1.15.0"
     },
     "license": "UNLICENSED",
     "private": true,
