--- a/config/packages/gesdinet_jwt_refresh_token.yaml
+++ b/config/packages/gesdinet_jwt_refresh_token.yaml
@@ -3,4 +3,4 @@ gesdinet_jwt_refresh_token:
     ttl: 2592000
     firewall: api
     token_parameter_name: refresh_token
-    single_use: true
+    single_use: false
