--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -51,7 +51,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/$, roles: PUBLIC_ACCESS } # Allows accessing the Swagger UI
-        - { path: ^/api/(docs|login|token/refresh), roles: PUBLIC_ACCESS }
+        - { path: ^/api/(docs|register|login|token/refresh), roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
