--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "postcss-loader": "^7.3.4",
         "regenerator-runtime": "^0.13.9",
         "tailwindcss": "^3.4.3",
+        "ts-loader": "^9.5.1",
         "vite": "^5.2.12",
         "vite-plugin-vue-devtools": "^7.0.25",
         "webpack": "^5.74.0",
