back-6 Добавил запрос к сервису подсчета цен при получении полетов

--- a/.env
+++ b/.env
@@ -29,3 +29,6 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=
 ###< lexik/jwt-authentication-bundle ###
+
+PRICE_COUNTER_BASE_URL='http://example.com'
+# PRICE_COUNTER_TOKEN='some_token'
