--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\ApiClient\PriceCounterClient:
+        arguments:
+            $baseUrl: '%env(PRICE_COUNTER_BASE_URL)%'
+            # $token: '%env(PRICE_COUNTER_TOKEN)%'
