--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dependencies": {
         "@mdi/font": "^7.4.47",
         "axios": "^1.7.2",
+        "typescript": "^5.4.5",
         "vue": "^3.4.27",
         "vue-loader": "^17.4.2",
         "vue-router": "^4.3.2",
